fix(message): add overflow style to message

--- a/components/message/message.styl
+++ b/components/message/message.styl
@@ -1,6 +1,7 @@
 .message
 	position relative
 	display block
+	overflow hidden
 	flex-shrink 0
 	min-height 60px
 	padding 8px 50px 8px 70px
